--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-icon": "^1.0.0",
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
     "reactstrap": "^9.1.2",
     "sass": "^1.53.0",
     "web-vitals": "^2.1.4"
