--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-icon": "^1.0.0",
     "react-icons": "^4.4.0",
+    "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
     "reactstrap": "^9.1.2",
