--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.5.5",
     "react-toastify": "^9.0.8",
     "reactstrap": "^9.1.2",
     "sass": "^1.53.0",
